Fixing dark mode on mobile.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,5 +10,10 @@
   margin: 0;
   width: 100%;
   scroll-behavior: smooth;
-  overscroll-behavior-y: contain;
+}
+
+@media (prefers-color-scheme: dark) {
+  html, body {
+    background-color: black;
+  }
 }
